--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '* */3 * * *'
   workflow_dispatch:
 
 jobs:
