--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "node-fetch": "^2.6.7",
-    "moment": "^2.29.3"
+    "node-fetch": "^3.3.2"
   }
 }
