--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
       - name: "3"
         run: |
           rm -rf node_modules
-          git config user.name "${GITHUB_ACTOR}"
-          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          git config user.name "${{ secrets.gh_USER }}"
+          git config user.email "${{ secrets.gh_EMAIL }}@users.noreply.github.com"
           git add .
           git commit -am "Update README.md"
           git push --all -f https://${{ secrets.gh_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
